--- a/Ecom/Views/Shared/_AdminLayout.cshtml
+++ b/Ecom/Views/Shared/_AdminLayout.cshtml
@@ -327,7 +327,7 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="@Url.Action("UploadXML", "Admin")" class="nav-link">
+                <a href="@Url.Action("Index", "ImportExport")" class="nav-link">
                     <i class="fas fa-plus-circle"></i>
                     Upload XML
                 </a>
