--- a/Ecom/Views/Admin/Orders.cshtml
+++ b/Ecom/Views/Admin/Orders.cshtml
@@ -57,6 +57,10 @@
                                             </td>
                                             <td>@order.ShippingAddress</td>
                                             <td>
+                                                <a href="@Url.Action("OrderDetails", "Admin", new { id = order.OrderID })"
+                                                   class="btn btn-sm btn-info" title="View Details">
+                                                    <i class="fas fa-eye"></i> Details
+                                                </a>
                                                 <form method="post" asp-action="UpdateOrderStatus" class="d-inline">
                                                     <input type="hidden" name="orderId" value="@order.OrderID" />
                                                     <form method="post" asp-action="UpdateOrderStatus" class="d-inline">
