--- a/Ecom/Views/Order/Details.cshtml
+++ b/Ecom/Views/Order/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Ecom.Models.Order
 
-@{ ViewData["Title"] = "Order Details"; }
+@{ ViewData["Title"] = "Order Details"; 
+    }
 
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
